# Ielts-monitoring-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.huggingface  Dockerfile.koyab  Makefile  PROJECT_STRUCTURE.md  README.md  config-simulation.yaml  config-test.yaml  config.yaml  docker-compose.yml  env.template  pyproject.toml  requirements.txt  run.py  sample-html-page.html  test_notifications.py  test_url_construction.py  verify_setup.py
.github/workflows/: monitor.yml
docker/: docker-build.sh  docker-entrypoint.sh
docs/: DEPLOYMENT_CHECKLIST.md  DOCKER_GUIDE.md  FIXES_SUMMARY.md  KOYEB_DEPLOYMENT.md  PRODUCTION_GUIDE.md  README-SIMULATION.md  README.md
legacy/: README.md  run.py
samples/: README.md  sample-html-page-simulation.html
simulation-server/: Dockerfile  README.md  requirements.txt  server.py  start_server.py
simulation-server/data/: appointments.json
simulation-server/static/: ielts-timetable.html
src/ielts_monitor/: __init__.py  __main__.py
src/ielts_monitor/config/: __init__.py  settings.py
src/ielts_monitor/notification/: __init__.py  http_sender.py  service.py
src/ielts_monitor/parser/: __init__.py  availability.py
src/ielts_monitor/scraper/: __init__.py  client.py
src/ielts_monitor/utils/: __init__.py  logger.py
tests/: README.md  debug_telegram.py  setup_telegram.py  test_correct_chat_id.py  test_enhanced_logging.py  test_notification_real.py  test_notification_simple.py  test_simulation.py  test_telegram_http.py  test_telegram_simple.py  test_url_fixes.py
