[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ielts_monitor"
version = "0.1.0"
description = "IELTS appointment monitoring application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ielts_monitor"]